--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="git.css">
     <title>使用git的教学</title>
 </head>
 <body>
-     Hello world!
+    <h2>Hello world!</h2> 
 </body>
 </html>
